@@ -193,7 +193,7 @@ extern STATUS h2devFree ( int dev );
 extern STATUS h2devClean ( const char *name );
 extern long h2devGetKey ( int type, int dev, BOOL create, int *pFd );
 extern int h2devGetSemId ( void );
-extern STATUS h2devInit ( int smMemSize );
+extern STATUS h2devInit ( int smMemSize, int posterServFlag );
 extern STATUS h2devShow ( void );
 
 #ifdef __cplusplus
